--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -15,3 +15,19 @@
 {
  display:inline-block;
 } 
+.anim {
+    background-color: white;
+    width: 100px;
+    height: 100px;
+    position: relative;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-delay: 2s;
+}
+@keyframes example {
+  0%   {background-color: white; left:0px; top:0px;}
+  25%  {background-color: white; left:200px; top:0px;}
+  50%  {background-color: white; left:400px; top:0px;}
+  75%  {background-color: white; left:600px; top:0px;}
+  100% {background-color: white; left:800px; top:0px;}
+}
