--- a/templates/home.html
+++ b/templates/home.html
@@ -44,29 +44,20 @@
                     <input type="range" min="1" max="100" value="50" class="slider" id="ve">
                   </div>
                   <div class="slidecontainer">
-                    <label><p>Initial Speed</p></label>
-                    <input type="range" min="1" max="100" value="50" class="slider" id="v0">
+                    <label><p>Exhaust radious</p></label>
+                    <input type="range" min="1" max="100" value="50" class="slider" id="re">
                   </div>
                   <div class="slidecontainer">
-                    <label><p>Initial mass</p></label>
+                    <label><p>Fuel mass</p></label>
                     <input type="range" min="1" max="100" value="50" class="slider" id="m0">
                   </div>
                   <div class="slidecontainer">
                     <label><p>Mass flow rate</p></label>
                     <input type="range" min="1" max="100" value="50" class="slider" id="mfr">
                   </div>
-                  <div class="slidecontainer">
-                    <label><p>Inital altitude</p></label>
-                    <input type="range" min="1" max="100" value="50" class="slider" id="x0">
-                  </div>
-                  <div class="slidecontainer">
-                    <label><p>Time interval</p></label>
-                    <input type="range" min="1" max="100" value="50" class="slider" id="t">
-                  </div>
-                  <div class="slidecontainer">
-                    <label><p>Inital altitude</p></label>
-                    <input type="range" min="1" max="100" value="50" class="slider" id="x0">
-                  </div>
+                  
+
+
             </form>
             <canvas id="line-chart" width="800" height="400"></canvas>
             
