--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,44 @@
       height: 100%;
       margin: 0;
     }
+    .footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+.button4 {
+  background-color: white;
+  color: black;
+  border: 2px solid #e7e7e7;
+}
+
+.button4:hover {background-color: #e7e7e7;}
+
+
+.body {
+  top: 150px;
+  font-size: large;
+  position: fixed;
+  color: white;
+  text-align: left;
+  left: 50px;
+}
     .wh {
         color: white;
         margin: auto;
@@ -16,24 +54,33 @@
     
       /* Full height */
       height: 100%; 
-    
+      
       /* Center and scale the image nicely */
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
     }
+    a {
+  color: cyan;
+}
     </style>
     </head>
-    <body>
-    
     <div class="bg">
-        <form  class="wh" action="/home">
+    <body>
+    <!-- RUNNING OUT OF TIME HEELP-->
+   
+        <form  class="body" action="/home">
         <h1>
-            THE BEST ROCKET SIMULATION YOU HAVE EVER SEEEN IN YOUR EYES
+            Can your Engine make it?
         </h1>
-        <input type="submit" value="LETS GOOO">
+        <p> 
+          Can your engine make it as an informational site dedicated to teaching whether different kind engines can make it out of eart.<br> Using various parameters you can learn if your engine can make it to outer space!
+          <br><a href="https://github.com/cents02/EngineComparison" target="_blank">Github</href>
+        </p>
+        <input type="submit" class="button button4" value="Begin">
     </form>
-    <footer><p class="wh"> 	&#169; Space Potatos</p></footer>
-    </div>
-    </body>
     
+    
+    </body>
+    <footer><p class="footer"> 	&#169; Space Potatos</p></footer>
+  </div>
