--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
         </h1>
         <p> 
           Can your engine make it as an informational site dedicated to teaching whether different kind engines can make it out of eart.<br> Using various parameters you can learn if your engine can make it to outer space!
-          <br><a href="https://github.com/cents02/EngineComparison" target="_blank">Github</href>
+          <br><a href="https://github.com/cents02/EngineComparison" target="_blank">Github</href>      <a href="https://www.dropbox.com/sh/d3bwrvux4g4weuh/AAD4N3vfJ6UaYE15bRuRZoxba?dl=0" target="_blank">Research Paper</href>
         </p>
         <input type="submit" class="button button4" value="Begin">
     </form>
