A final messsage and goodbye

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,13 +74,13 @@
             Can your Engine make it?
         </h1>
         <p> 
-          Can your engine make it as an informational site dedicated to teaching whether different kind engines can make it out of eart.<br> Using various parameters you can learn if your engine can make it to outer space!
-          <br><a href="https://github.com/cents02/EngineComparison" target="_blank">Github</href>      <a href="https://www.dropbox.com/sh/d3bwrvux4g4weuh/AAD4N3vfJ6UaYE15bRuRZoxba?dl=0" target="_blank">Research Paper</href>
+          Can your engine make it is an informational site dedicated to teaching different kind engines by showing if they can make it out of earths atmosphere.<br> Using various parameters you can learn if your engine can make it to outer space!
+          <br><a href="https://github.com/cents02/EngineComparison" target="_blank">Github</href></a><a href="https://www.dropbox.com/sh/d3bwrvux4g4weuh/AAD4N3vfJ6UaYE15bRuRZoxba?dl=0" target="_blank">Research Paper</href></a>
         </p>
         <input type="submit" class="button button4" value="Begin">
     </form>
     
     
     </body>
-    <footer><p class="footer"> 	&#169; Space Potatos</p></footer>
+    <footer><p class="footer"> 	&#169; Space Potatoes</p></footer>
   </div>
